# basic_brutus

./: .env  Cargo.toml  README.md
src/: connection.rs  console.rs  file.rs  main.rs  parser.rs
src/utils/: connection.rs  console.rs  core.rs  logger.rs  parser.rs
