[package]
name = "basic_brutus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
base64 = "0.13.0"
reqwest = { version = "0.11.12", features = ["native-tls"] }
rayon = "1.5.3"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.6"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"